--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,14 @@
-@font-face {
-    font-family: "Anime Ace v05";
-    src: local("Anime Ace v05"), url("/fonts/AnimeAce.ttf") format("ttf");
-}
-
 body {
     text-align: center;
-    color: white;
     margin-top: 0px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
-    background: #000000;
 }
 
+#hrinvis {
+    size: 3px;
+}
 
 .body-index {
     /* NULL */
@@ -26,20 +22,7 @@ body {
     /* NULL */
 }
 
-.body-trans {
-    background: rgb(0, 0, 0, 0.6);
-}
-
-summary {
-    color: deeppink;
-}
-
-.hr-v {
-    color: #ffffff;
-}
-
 .hr-i {
-    color: rgb(255, 255, 255, 0);
     height: 1px;
 }
 
@@ -49,16 +32,6 @@ img {
 
 ul {
     list-style-position: inside;
-}
-
-a {
-    color: deeppink;
-}
-a:visited {
-    color: purple;
-}
-a:active {
-    color: pink;
 }
 
 #lista {
@@ -72,7 +45,7 @@ a:active {
 }
 
 .titlediv {
-    font-family: "Anime Ace v05";
+    font-family: "Comic Sans MS";
 }
 
 .contentdiv {
@@ -80,36 +53,26 @@ a:active {
 }
 
 #card {
-    box-shadow: 4px 4px 4px 0 rgb(255, 255, 255, 1);
     transition: 0.3s;
     padding-left: 2px;
     padding-top: 2px;
     padding-bottom: 2px;
     padding-right: 2px;
 }
-#card2 {
-    border: 1px solid #ffffff;
-}
 
 .card-title {
     padding: 1px 0px 1px 10px;
-    font-family: "Anime Ace v05";
-    font-size: 90%;
+    font-family: "Comic Sans MS";
 }
 
 .card-text {
     padding: 1px 0px 1px 5px;
-    font-family: "Anime Ace v05";
-    font-size: 70%;
+    font-family: "Comic Sans MS";
 }
 
 .card-button {
-    background-color: rgba(0, 0, 0, 0.5);
-    border: 1px solid rgb(255, 255, 255);
     padding: 5px;
-    color: #ffffff;
-    font-family: "Anime Ace v05";
-    font-size: 70%;
+    font-family: "Comic Sans MS";
     cursor: pointer;
     opacity: 1;
 }
@@ -128,25 +91,22 @@ a:active {
 }
 
 .aace {
-    font-family: "Anime Ace v05";
+    font-family: "Comic Sans MS";
 }
 
 #maindiv {
-    background-color:  rgba(0, 0, 0, 0.8);
     margin-top: 0px;
 }
 
 
 table {
-    border-bottom: 0px solid rgba(0, 0, 0, 0);
-    background: rgba(0, 0, 0, 0);
     margin: 0 auto 0 auto;
 }
+
 th {
-    background: rgba(0, 0, 0, 0);
-    color: rgba(0, 0, 0, 0); 
     text-align: center;
 }
+
 td, th {
     padding: 2px;
 }
