--- a/css/color-light.css
+++ b/css/color-light.css
@@ -18,6 +18,12 @@
     color: #000000;
 }
 
+.theme-button {
+    background-color: rgba(255, 255, 255, 0.5);
+    border: 1px solid rgb(0, 0, 0);
+    color: #000000;
+}
+
 body {
     color: black;
     background: white;
