--- a/css/manga.css
+++ b/css/manga.css
@@ -13,6 +13,7 @@
     padding-bottom: 2px;
     padding-right: 2px;
     font-family: "Comic Sans MS";
+    text-align: left;
 }
 .cardch {
     transition: 0.3s;
