--- a/css/index.css
+++ b/css/index.css
@@ -30,3 +30,25 @@
     padding-right: 2px;
     font-family: "Comic Sans MS";
 }
+
+@media only screen and (min-width : 801px) {
+    .last-ch {
+        width: 100%;
+        height: 15%;
+        padding-left: 0px;
+        padding-right: 0px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+}
+    
+@media only screen and (max-width : 800px) {
+    .last-ch {
+        width: 100%;
+        height: 30%;
+        padding-left: 0px;
+        padding-right: 0px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+}
