--- a/css/color-dark.css
+++ b/css/color-dark.css
@@ -51,15 +51,19 @@ summary {
 }
 
 a {
-    color: deeppink;
+    color: Pink;
 }
 
 a:visited {
-    color: purple;
+    color: HotPink;
 }
 
 a:active {
-    color: pink;
+    color: PaleVioletRed;
+}
+
+.title-index-nyaa {
+    color: Orchid;
 }
 
 #card {
