--- a/css/index.css
+++ b/css/index.css
@@ -33,7 +33,15 @@
 
 @media only screen and (min-width : 801px) {
     .last-ch {
-        width: 100%;
+        width: 50%;
+        height: 15%;
+        padding-left: 0px;
+        padding-right: 0px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+    .promo-link {
+        width: 50%;
         height: 15%;
         padding-left: 0px;
         padding-right: 0px;
@@ -47,6 +55,14 @@
     
 @media only screen and (max-width : 800px) {
     .last-ch {
+        width: 100%;
+        height: 30%;
+        padding-left: 0px;
+        padding-right: 0px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+    .promo-link {
         width: 100%;
         height: 30%;
         padding-left: 0px;
