--- a/css/manga.css
+++ b/css/manga.css
@@ -1,9 +1,7 @@
 .progress-page {
     width: 100%;
 }
-.cover {
-    width: 25%;
-}
+
 .invis {
     display: none;
 }
@@ -21,4 +19,16 @@
     padding-bottom: 2px;
     padding-right: 2px;
     font-family: "Comic Sans MS";
+}
+
+@media only screen and (min-width : 801px) { 
+    .cover {
+        width: 90%;
+    }
+}
+
+@media only screen and (max-width : 800px) {
+    .cover {
+        width: 25%;
+    }
 }
