--- a/css/color-dark.css
+++ b/css/color-dark.css
@@ -3,22 +3,25 @@
 }
 
 .card {
-    padding-top: 2px rgb(255, 255, 255, 1);
-    border: 2px solid white;
+    background-color: rgba(16, 16, 16, 0.5);
+    padding-top: 0px rgb(255, 255, 255, 1);
+    border: 0px solid white;
 }
 .cardch {
-    padding-top: 2px rgb(255, 255, 255, 1);
-    border: 2px solid white;
+    background-color: rgba(16, 16, 16, 0.5);
+    padding-top: 0px rgb(255, 255, 255, 1);
+    border: 0px solid white;
 }
 
 .carda {
+    background-color: rgba(16, 16, 16, 0.5);
     padding-top: 2px rgb(255, 255, 255, 1);
-    border: 1px solid white;
+    border: 0px solid white;
 }
 
 .card-button-ch {
     background-color: rgba(16, 16, 16, 0.5);
-    border: 1px solid rgb(255, 255, 255);
+    border: 0px solid rgb(255, 255, 255);
     color: #ffffff;
 }
 
@@ -30,7 +33,7 @@
 
 body {
     color: white;
-    background: #101010;
+    background: #2c2c2c;
 }
 
 .body-trans {
@@ -76,12 +79,24 @@ a:active {
 
 .card-button {
     background-color: rgba(16, 16, 16, 0.5);
-    border: 1px solid rgb(255, 255, 255);
+    border: 0px solid rgb(255, 255, 255);
+    color: #ffffff;
+}
+
+.nav-button {
+    background-color: rgba(16, 16, 16, 0.5);
+    border: 0px solid rgb(255, 255, 255);
+    color: #ffffff;
+}
+
+.block-text {
+    background-color: rgba(16, 16, 16, 0.5);
+    border: 0px solid rgb(255, 255, 255);
     color: #ffffff;
 }
 
 #maindiv {
-    background-color:  rgba(0, 0, 0, 0);
+    background-color:  rgb(44, 44, 44);
 }
 
 
@@ -93,4 +108,8 @@ table {
 th {
     background: rgba(0, 0, 0, 0);
     color: rgba(0, 0, 0, 0); 
+}
+
+.logo-data {
+    content: url(/img/logo-w.png);
 }
