--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,34 @@ td, th {
     text-align: left;
 }
 
+.nav-button {
+    padding: 5px;
+    font-family: "Comic Sans MS";
+    cursor: pointer;
+    opacity: 1;
+    margin-bottom: 2px;
+}
+
+.button-e {
+    opacity: 1;
+}
+.button-e:hover {
+    opacity: 0.8;
+}
+
+.block-text {
+    font-family: "Comic Sans MS";
+    cursor: pointer;
+    opacity: 1;
+    margin-top: 2px;
+    padding: 5px;
+}
+
+.nav-hr {
+    width: 95%;
+    height: 1px;
+    visibility: hidden;
+}
 
 @media only screen and (min-width : 801px) {
     .pc-only {
@@ -170,6 +198,18 @@ td, th {
         background-clip: content-box;
         list-style: none;
     }
+    .nav-button {
+        width: 100%;
+        height: 15%;
+        padding-left: 0px;
+        padding-right: 0px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+    .block-text {
+        width: 100%;
+        height: 15%;
+    }
 }
 
 @media only screen and (min-width : 801px) and (max-width : 1090px) {
@@ -202,5 +242,17 @@ td, th {
     }
     .mobile-only {
         display: block;
+    }
+    .nav-button {
+        width: 100%;
+        height: 30%;
+        padding-left: 0px;
+        padding-right: 0px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+    .block-text{
+        width: 100%;
+        height: 30%;
     }
 }
