--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 body {
     text-align: center;
     margin-top: 0px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
+    font-family: 'Roboto', sans-serif;
 }
 
 #hrinvis {
@@ -48,10 +51,6 @@ ul {
     height: 100%;
 }
 
-.titlediv {
-    font-family: "Comic Sans MS";
-}
-
 .contentdiv {
     /* NULL */
 }
@@ -66,17 +65,15 @@ ul {
 
 .card-title {
     padding: 1px 0px 1px 10px;
-    font-family: "Comic Sans MS";
+    font-family: 'Roboto', sans-serif;
 }
 
 .card-text {
     padding: 1px 0px 1px 5px;
-    font-family: "Comic Sans MS";
 }
 
 .card-button {
     padding: 5px;
-    font-family: "Comic Sans MS";
     cursor: pointer;
     opacity: 1;
 }
@@ -92,10 +89,6 @@ ul {
     right: 1em;
     text-align: center;
     bottom: 1em;
-}
-
-.aace {
-    font-family: "Comic Sans MS";
 }
 
 #maindiv {
@@ -134,21 +127,21 @@ td, th {
 
 .nav-button {
     padding: 5px;
-    font-family: "Comic Sans MS";
-    cursor: pointer;
     opacity: 1;
     margin-bottom: 2px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .button-e {
     opacity: 1;
+    cursor: pointer;
 }
 .button-e:hover {
     opacity: 0.8;
+    cursor: pointer;
 }
 
 .block-text {
-    font-family: "Comic Sans MS";
     cursor: pointer;
     opacity: 1;
     margin-top: 2px;
@@ -159,6 +152,29 @@ td, th {
     width: 95%;
     height: 1px;
     visibility: hidden;
+}
+
+.invis {
+    display: none;
+}
+
+.card-block-h {
+    margin-left: 15px;
+    margin-right: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.card-block {
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.index-links {
+    margin-top: 10px;
+    width: 70%;
 }
 
 @media only screen and (min-width : 801px) {
@@ -210,6 +226,21 @@ td, th {
         width: 100%;
         height: 15%;
     }
+    .index-manga-one-1 {
+        width: 49%;
+        float: left;
+    }
+    
+    .index-manga-one-2 {
+        width: 49%;
+        float: right;
+    }
+    
+    .index-cover {
+        width: 30%;
+        margin: 7px 7px 7px 0;
+    }
+    
 }
 
 @media only screen and (min-width : 801px) and (max-width : 1090px) {
@@ -254,5 +285,9 @@ td, th {
     .block-text{
         width: 100%;
         height: 30%;
+    }
+    .index-cover {
+        width: 30%;
+        margin: 7px 7px 7px 0;
     }
 }
